# statgrab-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
examples/: sysinfo.rs
src/: lib.rs
