[package]
name = "statgrab"
authors = [ "Adam Flott <adam@adamflott.com>" ]
description = "Rust API to libstatgrab"
version = "0.9.7"
edition = "2021"
repository = "https://github.com/adamflott/statgrab-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.60"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libstatgrab-sys = "~1.0.2"
chrono = { version = "0.4.22", features = ["serde"], default-features = true }
serde = { version = "1.0.164",  optional = true }
serde_derive = { version = "1.0.125", optional = true }
serde_with = { version = "3.0.0", optional = true }

[features]
default = []
serde = ["dep:serde", "serde/derive", "serde_with/chrono_0_4"]